test/visibility/import/no-param-import.good
no-param-import.chpl:4: error: 'import' of non-module symbol p
no-param-import.chpl:2: error: Definition of symbol p
